# ADMission

./: .gitignore  CMakeLists.txt  LICENSE  README.md
additionals/cmake/: Finddrag.cmake  adm_config.cmake  adm_doxyfile.cmake  adm_openmp_backend.cmake
additionals/configs/: ad.in  adm_generate_dag.in  admission.in
additionals/templates/: admission_config.hpp.in
app/: CMakeLists.txt  adm_generate_dag.cpp  adm_verify.cpp  admission.cpp  gdjcpb_solve.cpp  print_dag.cpp
examples/: CMakeLists.txt  bat.in  bat.xml  lion.in  lion.xml  newton_1.in  newton_1.xml  newton_10.in  newton_10.xml  newton_2.in  newton_2.xml  openfoam.in  openfoam.xml  openfoam_1.in  openfoam_1.xml  openfoam_2.in  openfoam_2.xml
graphs/chain/: problem10  problem100  problem150  problem200  problem50  problem_dense10  problem_dense100  problem_dense150  problem_dense200  problem_dense50
graphs/paper/: R2.xml  bat_n1_c1.xml  bat_n1_c2.xml  lion_n1_c1.xml  lion_n1_c2.xml
graphs/simple/: Nau04Fig1_n1.xml  Nau04Fig1_n2.xml  diamond_n1.xml  diamond_n2.xml  diamond_plus1_n1.xml  diamond_plus1_n2.xml  lion_small_n1.xml  lion_small_n2.xml  tri_n1.xml
graphs/trivial/: line_n1.xml  line_n2.xml
include/: CMakeLists.txt  elimination_algorithm.hpp  factory.hpp  global_modes.hpp  properties.hpp  verify.hpp
include/graph/: DAG.hpp  chain.hpp  face_dag.hpp  generator.hpp  gpmap.hpp  join.hpp  min_max.hpp  neighbors.hpp  read_graph.hpp  tikz.hpp  utils.hpp  verify.hpp  write_graph.hpp
include/graph/impl/: DAG.hpp  face_dag.hpp  generator.hpp  gpmap.hpp  min_max.hpp  neighbors.hpp  tikz.hpp  utils.hpp  write_graph.hpp
include/lower_bounds/: lower_bound.hpp  simple_min_acc_cost_bound.hpp
include/lower_bounds/impl/: lower_bound.hpp
include/misc/: doxygen.hpp  newton_steps.hpp  pipe_pair.hpp
include/operations/: accumulate.hpp  elimination_algorithms.hpp  find_eliminations.hpp  global_modes.hpp  op_sequence.hpp
include/operations/impl/: elimination_algorithms.hpp  find_eliminations.hpp  op_sequence.hpp
include/optimizers/: adjoint_optimizer.hpp  all_optimizers.hpp  branch_and_bound.hpp  estimator.hpp  greedy_optimizer.hpp  min_edge_fill_in_optimizer.hpp  min_fill_in_optimizer.hpp  optimizer.hpp  optimizer_stats.hpp  tangent_optimizer.hpp
include/optimizers/impl/: branch_and_bound.hpp  greedy_optimizer.hpp  optimizer.hpp  optimizer_stats.hpp
include/util/: factory.hpp  openmp.hpp  properties.hpp
include/util/impl/: factory.hpp  openmp.hpp  properties.hpp
src/: CMakeLists.txt
src/graph/: CMakeLists.txt  chain.cpp  face_dag.cpp  generator.cpp  join.cpp  read_graph.cpp  tikz.cpp  verify.cpp  write_graph.cpp
src/lower_bounds/: CMakeLists.txt  lower_bound.cpp  simple_min_acc_cost_bound.cpp
src/misc/: CMakeLists.txt  newton_steps.cpp
src/operations/: CMakeLists.txt  accumulate.cpp  elimination_algorithms.cpp  find_eliminations.cpp  global_modes.cpp  op_sequence.cpp
src/optimizers/: CMakeLists.txt  adjoint_optimizer.cpp  branch_and_bound.cpp  estimator.cpp  greedy_optimizer.cpp  min_edge_fill_in_optimizer.cpp  min_fill_in_optimizer.cpp  optimizer.cpp  tangent_optimizer.cpp
